--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,5 +15,7 @@ jobs:
     steps: 
      - name: Execute start.sh
        run: |
+         pwd
+         ls -l
          chmod +x ./start.sh
          ./start.sh
