--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,8 +14,4 @@ jobs:
 
     steps: 
      - name: Execute start.sh
-       run: |
-         pwd
-         ls -l
-         # chmod +x ./start.sh
-         # ./start.sh
+       run: ls
