--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ node_js:
 
 before_install:
   - sudo /etc/init.d/postgresql stop
-  - npm install -g yo
-  - npm install --global generator-alfresco-docker-installer
-  - npm link
-  - yo alfresco-docker-installer --acsVersion=6.2 --ram=8 --mariadb=false --https=false --serverName=localhost --port=80 --ftp=false --crossLocale=false --smtp=false --ldap=false --addons=js-console --startscript=true
+  # - npm install -g yo
+  # - npm install --global generator-alfresco-docker-installer
+  # - npm link
+  # - yo alfresco-docker-installer --acsVersion=6.2 --ram=8 --mariadb=false --https=false --serverName=localhost --port=80 --ftp=false --crossLocale=false --smtp=false --ldap=false --addons=js-console --startscript=true
   # remove volume which create a permission denied issue
   - sed -i '\|logs/postgres|d' ./docker-compose.yml
 
@@ -26,11 +26,6 @@ jobs:
     - stage: Deploy Test
       name: Deploy with start script
       script: chmod +x start.sh && ./start.sh
-    - stage: Deploy Test
-      name: Deploy without start script
-      script:
-        - docker-compose up --build --force-recreate -d
-        - node_modules/wait-on/bin/wait-on "http://localhost:80/alfresco/" -t 500000
 
 after_failure:
   - docker-compose config
