--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,6 +15,8 @@ jobs:
     steps: 
     - name: Checkout
       uses: actions/checkout@v2.1.1
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v1.4.2
     - name: Execute start.sh
       run: |
         pwd
