test Windows build

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Setup Node.js environment
       uses: actions/setup-node@v1.4.2
     - name: Execute start.sh
+      shell: bash
       run: .\start.sh
     - name: The job has failed
       if: ${{ failure() }}
