--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,20 +16,20 @@ jobs:
       uses: actions/checkout@v2.1.1
     - name: Setup Node.js environment
       uses: actions/setup-node@v1.4.2
-    - name: Execute start.sh
-      run: |
-        sed -i '\|logs/postgres|d' ./docker-compose.yml
-        chmod +x start.sh && ./start.sh
-    - name: The job has failed
-      if: ${{ failure() }}
-      run: |
-        docker-compose config
-        docker-compose logs
+    # - name: Execute start.sh
+    #   run: |
+    #     sed -i '\|logs/postgres|d' ./docker-compose.yml
+    #     chmod +x start.sh && ./start.sh
+    # - name: The job has failed
+    #   if: ${{ failure() }}
+    #   run: |
+    #     docker-compose config
+    #     docker-compose logs
     - name: Newman Action
-      uses: matt-ball/newman-action@0.0.28
+      uses: matt-ball/newman-action@master
       with:
         workingDir: test
-        collection: alf-ec2.postman_collection.json
+        collection: alf-ec2.postman_collectionn.json
         reporters: cli,json
     - name: Postman Failed!
       if: ${{ failure() }}
