--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,7 +26,11 @@ jobs:
     #     docker-compose config
     #     docker-compose logs
     - name: Newman Action
-      uses: matt-ball/newman-action@master
+      - uses: actions/checkout@master
+      - uses: matt-ball/newman-action@master
+        with:
+          collection: postman_collection.json
+          environment: postman_environment.json
       # with:
       #   workingDir: test
       #   collection: alf-ec2.postman_collection.json
