test newman script

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,11 +20,11 @@ jobs:
       uses: actions/setup-node@v1.4.2
     - name: Execute start.sh
       run: |
-        # sed -i '\|logs/postgres|d' ./docker-compose.yml
+        sed -i '\|logs/postgres|d' ./docker-compose.yml
         chmod +x start.sh && ./start.sh
         ls -l
-        chown -R 33007 data/solr-data
-        chown -R 999 logs
+        # chown -R 33007 data/solr-data
+        # chown -R 999 logs
     - name: Docker Compose deployment has failed
       if: ${{ failure() }}
       run: |
