--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,6 +21,10 @@ jobs:
     - name: Execute start.sh
       run: |
         sed -i '\|logs/postgres|d' ./docker-compose.yml
+        mkdir -p data/solr-data
+        mkdir -p data/solr-data
+        chown -R runner:docker data/solr-data
+        chown -R runner:docker logs
         chmod +x start.sh && ./start.sh
         ls -l
         # chown -R 33007 data/solr-data
