test newman script

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -42,3 +42,5 @@ jobs:
       run: |
         echo "Postman Failed!"
         cat tmp/newman/report.json
+        docker-compose config
+        docker-compose logs
