--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-node@v1.4.2
     - name: Execute start.sh
       run: |
-        sed -i '\|logs/postgres|d' ./docker-compose.yml
+        # sed -i '\|logs/postgres|d' ./docker-compose.yml
         mkdir -p data/solr-data
         mkdir -p logs
         sudo chown -R 33007 data/solr-data
