--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,7 +9,8 @@ on:
 jobs:
 
   linux-build:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       fail-fast: true
 
@@ -20,27 +21,27 @@ jobs:
       uses: actions/setup-node@v1.4.2
     - name: Execute start.sh
       run: |
-        # sed -i '\|logs/postgres|d' ./docker-compose.yml
-        mkdir -p data/solr-data
-        mkdir -p logs/postgres
-        sudo chown -R 33007 data/solr-data
-        sudo chown -R 999 logs/postgres
-        chmod +x start.sh && ./start.sh
-        ls -l
-        # chown -R 33007 data/solr-data
-        # chown -R 999 logs/postgres
-    - name: Docker Compose deployment has failed
-      if: ${{ failure() }}
-      run: |
-        docker-compose config
-        docker-compose logs
-    - name: Execute Postman Tests
-      run: |
-        npx newman run test/alf-ec2.postman_collection.json -r cli,json --reporter-json-export tmp/newman/report.json
-    - name: Postman has failed!
-      if: ${{ failure() }}
-      run: |
-        echo "Postman Failed!"
-        cat tmp/newman/report.json
-        docker-compose config
-        docker-compose logs
+        curl -s http://169.254.169.254/latest/meta-data/public-hostname
+    #     mkdir -p data/solr-data
+    #     mkdir -p logs/postgres
+    #     sudo chown -R 33007 data/solr-data
+    #     sudo chown -R 999 logs/postgres
+    #     chmod +x start.sh && ./start.sh
+    #     ls -l
+    #     # chown -R 33007 data/solr-data
+    #     # chown -R 999 logs/postgres
+    # - name: Docker Compose deployment has failed
+    #   if: ${{ failure() }}
+    #   run: |
+    #     docker-compose config
+    #     docker-compose logs
+    # - name: Execute Postman Tests
+    #   run: |
+    #     npx newman run test/alf-ec2.postman_collection.json -r cli,json --reporter-json-export tmp/newman/report.json
+    # - name: Postman has failed!
+    #   if: ${{ failure() }}
+    #   run: |
+    #     echo "Postman Failed!"
+    #     cat tmp/newman/report.json
+    #     docker-compose config
+    #     docker-compose logs
