--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,27 +21,25 @@ jobs:
       uses: actions/setup-node@v1.4.2
     - name: Execute start.sh
       run: |
-        curl -s http://169.254.169.254/latest/meta-data/public-hostname
-    #     mkdir -p data/solr-data
-    #     mkdir -p logs/postgres
-    #     sudo chown -R 33007 data/solr-data
-    #     sudo chown -R 999 logs/postgres
-    #     chmod +x start.sh && ./start.sh
-    #     ls -l
-    #     # chown -R 33007 data/solr-data
-    #     # chown -R 999 logs/postgres
-    # - name: Docker Compose deployment has failed
-    #   if: ${{ failure() }}
-    #   run: |
-    #     docker-compose config
-    #     docker-compose logs
-    # - name: Execute Postman Tests
-    #   run: |
-    #     npx newman run test/alf-ec2.postman_collection.json -r cli,json --reporter-json-export tmp/newman/report.json
-    # - name: Postman has failed!
-    #   if: ${{ failure() }}
-    #   run: |
-    #     echo "Postman Failed!"
-    #     cat tmp/newman/report.json
-    #     docker-compose config
-    #     docker-compose logs
+        # curl -s http://169.254.169.254/latest/meta-data/public-hostname
+        mkdir -p data/solr-data
+        mkdir -p logs/postgres
+        sudo chown -R 33007 data/solr-data
+        sudo chown -R 999 logs/postgres
+        chmod +x start.sh && ./start.sh -spr https -sh a.alfpro.net -sp 443
+        ls -l
+    - name: Docker Compose deployment has failed
+      if: ${{ failure() }}
+      run: |
+        docker-compose config
+        docker-compose logs
+    - name: Execute Postman Tests
+      run: |
+        npx newman run test/alf-ec2.postman_collection.json -r cli,json --reporter-json-export tmp/newman/report.json
+    - name: Postman has failed!
+      if: ${{ failure() }}
+      run: |
+        echo "Postman Failed!"
+        cat tmp/newman/report.json
+        docker-compose config
+        docker-compose logs
