--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,13 @@ services:
                 -Dindex.subsystem.name=solr6
                 -Dalfresco.host=${SERVER_HOST}
                 -Dalfresco.port=${SERVER_PORT}
+                -Dalfresco.protocol=${PROTOCOL}
 
                 -Dshare.host=${SERVER_HOST}
                 -Dshare.port=${SERVER_PORT}
+                -Dshare.protocol=${PROTOCOL}
 
-                -Daos.baseUrlOverwrite=http://${SERVER_HOST}/alfresco/aos
+                -Daos.baseUrlOverwrite=${PROTOCOL}://${SERVER_HOST}/alfresco/aos
                 -Dmessaging.broker.url="failover:(nio://activemq:61616)?timeout=3000&jms.useCompression=true"
                 -Ddeployment.method=DOCKER_COMPOSE
                 -Dcsrf.filter.enabled=false
@@ -49,6 +51,7 @@ services:
                 -Dcsrf.filter.enabled=false
                 -Dalfresco.restApi.basicAuthScheme=true
                 -Dauthentication.protection.enabled=false
+
                 -XX:+UseG1GC -XX:+UseStringDeduplication
                 -Xms1856m -Xmx1856m
             '
@@ -113,7 +116,6 @@ services:
                 "
         volumes:
             - ./logs/share:/usr/local/tomcat/logs
-
 
     postgres:
         image: postgres:${POSTGRES_TAG}
@@ -180,59 +182,59 @@ services:
 
     # HTTP proxy to provide HTTP Default port access to services
     # SOLR API and SOLR Web Console are protected to avoid unauthenticated access
-    proxy:
-        image: nginx:stable-alpine
-        mem_limit: 128m
-        depends_on:
-            - alfresco
-            - solr6
-            - share
-            - content-app
-        volumes:
-            - ./config/nginx.conf:/etc/nginx/nginx.conf
-            # - ./config/nginx.htpasswd:/etc/nginx/conf.d/nginx.htpasswd
-            # - ./config/cert/localhost.cer:/etc/nginx/localhost.cer
-            # - ./config/cert/localhost.key:/etc/nginx/localhost.key
-        ports:
-            - 80:80
+    # proxy:
+    #     image: nginx:stable-alpine
+    #     mem_limit: 128m
+    #     depends_on:
+    #         - alfresco
+    #         - solr6
+    #         - share
+    #         - content-app
+    #     volumes:
+    #         - ./config/nginx.conf:/etc/nginx/nginx.conf
+    #         # - ./config/nginx.htpasswd:/etc/nginx/conf.d/nginx.htpasswd
+    #         # - ./config/cert/localhost.cer:/etc/nginx/localhost.cer
+    #         # - ./config/cert/localhost.key:/etc/nginx/localhost.key
+    #     ports:
+    #         - 80:80
 
     # HTTP proxy to provide HTTP Default port access to services
     # SOLR API and SOLR Web Console are protected to avoid unauthenticated access
-    # proxy:
-    #   image: nginx:alpine
-    #   mem_limit: 128m
-    #   depends_on:
-    #     - alfresco
-    #     - solr6
-    #     - share
-    #     - content-app
-    #   volumes:
-    #     - ./config/nginx.conf:/etc/nginx/nginx.conf
-    #     - ./config/nginx.htpasswd:/etc/nginx/conf.d/nginx.htpasswd
-    #   environment:
-    #     - VIRTUAL_PORT=80
-    #     - VIRTUAL_HOST=example.com
-    #     - LETSENCRYPT_HOST=example.com
-    #     - LETSENCRYPT_EMAIL=damadden88@googlemail.com
+    proxy:
+      image: nginx:alpine
+      mem_limit: 128m
+      depends_on:
+        - alfresco
+        - solr6
+        - share
+        - content-app
+      volumes:
+        - ./config/nginx.conf:/etc/nginx/nginx.conf
+        - ./config/nginx.htpasswd:/etc/nginx/conf.d/nginx.htpasswd
+      environment:
+        - VIRTUAL_PORT=80
+        - VIRTUAL_HOST=a.alfpro.net
+        - LETSENCRYPT_HOST=a.alfpro.net
+        - LETSENCRYPT_EMAIL=damadden88@googlemail.com
 
 
-    # nginx-proxy:
-    #   image: jwilder/nginx-proxy
-    #   ports:
-    #     - "80:80"
-    #     - "443:443"
-    #   volumes:
-    #     - "/etc/nginx/vhost.d"
-    #     - "/usr/share/nginx/html"
-    #     - "/var/run/docker.sock:/tmp/docker.sock:ro"
-    #     - "/etc/nginx/certs"
+    nginx-proxy:
+      image: jwilder/nginx-proxy
+      ports:
+        - "80:80"
+        - "443:443"
+      volumes:
+        - "/etc/nginx/vhost.d"
+        - "/usr/share/nginx/html"
+        - "/var/run/docker.sock:/tmp/docker.sock:ro"
+        - "/etc/nginx/certs"
 
-    # letsencrypt-nginx-proxy-companion:
-    #   image: jrcs/letsencrypt-nginx-proxy-companion
-    #   volumes:
-    #     - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    #   volumes_from:
-    #     - "nginx-proxy"
+    letsencrypt-nginx-proxy-companion:
+      image: jrcs/letsencrypt-nginx-proxy-companion
+      volumes:
+        - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      volumes_from:
+        - "nginx-proxy"
 
 
 
