--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,10 +212,10 @@ services:
         - ./config/nginx.conf:/etc/nginx/nginx.conf
         - ./config/nginx.htpasswd:/etc/nginx/conf.d/nginx.htpasswd
       environment:
-        - VIRTUAL_PORT=80
-        - VIRTUAL_HOST=a.alfpro.net
-        - LETSENCRYPT_HOST=a.alfpro.net
-        - LETSENCRYPT_EMAIL=damadden88@googlemail.com
+        VIRTUAL_PORT: 80
+        VIRTUAL_HOST: ${SERVER_HOST}
+        LETSENCRYPT_HOST: ${SERVER_HOST}
+        LETSENCRYPT_EMAIL: damadden88@googlemail.com
 
 
     nginx-proxy:
