--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,7 +25,7 @@ jobs:
         mkdir -p logs/postgres
         sudo chown -R 33007 data/solr-data
         sudo chown -R 999 logs/postgres
-        chmod +x start.sh && ./start.sh -spr https -sh a.alfpro.net -sp 443
+        chmod +x start.sh && ./start.sh -spr https -sh a.notreal.net -sp 443
     - name: Docker Compose deployment has failed
       if: ${{ failure() }}
       run: |
