--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -215,7 +215,7 @@ services:
         VIRTUAL_PORT: 80
         VIRTUAL_HOST: ${SERVER_HOST}
         LETSENCRYPT_HOST: ${SERVER_HOST}
-        LETSENCRYPT_EMAIL: damadden88@googlemail.com
+        LETSENCRYPT_EMAIL: admin@notreal.net
 
 
     nginx-proxy:
